# cloudportal

./: .gitignore  README.md  pyproject.toml
accounts/: managers.py  models.py
accounts/migrations/: 0023_add_task_completion_mode.py  0024_alter_customuser_managers_customuser_role.py  0025_add_home_weather.py  0026_add_weather_location.py  0027_default_home_weather_enabled.py
apps/contacts/: views.py
apps/favorites/: views.py
apps/folders/: folders.py  views.py
apps/home/: google.py  views.py
apps/notes/: views.py
apps/settings/: forms.py  views.py
apps/settings/users/: filters.py  (+3 more)
apps/tasks/: filter.py  forms.py  models.py  views.py
apps/weather/: views.py
config/: email.py  settings.py  urls.py
extension/: README.md  background.js  generate-icons.py  manifest.json  options.html  options.js
static/css/: app-folders.css  app-home.css  app-notes.css  app-settings.css  app-tasks.css  base-app.css  base-forms.css  drawer.css  theme-auto.css  theme-hojicha.css
static/js/: alpine-components.js  notes-editor.js
templates/: base.html  errors.html  print.html
templates/favorites/: content.html  extension_base.html  favorites.html
templates/folders/: list.html  menu.html  tree.html
templates/home/: content.html  due_tasks.html  events.html  favorites.html  weather_indicator.html
templates/notes/: editor.html  list.html  main.html
templates/registration/: base.html
templates/settings/: homepage.html  main.html  tasks.html
templates/tasks/: filter.html  list.html  row.html
templates/weather/: content.html  data.html  no-data.html
(+12 files in other folders)
