[project]
name = "cloudportal"
version = "0.1.0"
description = "CloudPortal — a personal productivity portal built with Django."
requires-python = ">=3.12"
dependencies = [
    "Django==5.2.11",
    "django-environ==0.12.0",
    "django-filter==25.2",
    "django-mathfilters==1.0.0",
    "django-watson==1.6.3",
    "google-api-python-client==2.187.0",
    "google-auth-httplib2==0.2.1",
    "google-auth-oauthlib==1.2.3",
    "gunicorn==23.0.0",
    "Markdown==3.10",
    "psycopg2-binary==2.9.11",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "requests==2.32.5",
    "twilio==9.8.7",
]

[dependency-groups]
dev = [
    "black==25.11.0",
    "django-dump-die==0.1.7",
    "django-stubs==5.2.2",
    "pre-commit==4.5.0",
    "pudb==2025.1.3",
    "pytest==9.0.1",
    "pytest-django==4.11.1",
    "types-PyYAML==6.0.12.20250809",
]

[tool.uv]
package = false
